* python/ec2/lib.py added '-PN' to python-nmap command (Bug #35850) * added examples/jenkins/autotest-220-ad-win2k8-master.cfg (Bug #35913)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53779 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,10 @@
+ucs-ec2-tools (0.1.22-5) unstable; urgency=low
+
+  * python/ec2/lib.py added '-PN' to python-nmap command (Bug #35850)
+  * added examples/jenkins/autotest-220-ad-win2k8-master.cfg (Bug #35913)
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 19 Sep 2014 11:58:24 +0200
+
 ucs-ec2-tools (0.1.22-4) unstable; urgency=low
 
   * /python/ec2/lib.py: fixed wrong port format in def connect
