UCS 4.0 kde theme (Bug #35936)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53783 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/univention-kde/debian/changelog
+++ b/desktop/univention-kde/debian/changelog
@@ -1,3 +1,9 @@
+univention-kde (9.0.2-1) unstable; urgency=low
+
+  * UCS 4.0 kde theme (Bug #35936) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 19 Sep 2014 13:13:58 +0200
+
 univention-kde (9.0.1-1) unstable; urgency=low
 
   * Switch from gdm to kdm (Bug #35266)
