domain_mode=False for dc promo (Bug #35096)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53786 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-windows-tools/debian/changelog
+++ b/test/ucs-windows-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-windows-tools (2.0.1-1) unstable; urgency=low
+
+  * domain_mode=False for dc promo (Bug #35096) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 19 Sep 2014 14:46:38 +0200
+
 ucs-windows-tools (2.0.0-1) unstable; urgency=low
 
   * Migrated ucs-windows-tools to UCS-4.0-0 (Bug #35664)
