Bug #33397 GRUB: Remove old UEFI code
Debian Installer does the right thing when installing on EFI™.
Remove double UCS/Univention entry in EFI Boot Manager.
Remove trailing blanks and empty lines.
Replace deprecated dict.has_key() with 'key' in 'dict'.
Remove UCRV grub/vga.
Remove UCS-3 transition code.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53793 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,6 +1,12 @@
+univention-grub (8.0.3-4) unstable; urgency=low
+
+  * Bug #33397: Remove old UEFI code
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 18 Sep 2014 13:13:28 +0200
+
 univention-grub (8.0.3-3) unstable; urgency=low
 
-  * Bug #35934: Fix shell script syntax error in last commi
+  * Bug #35934: Fix shell script syntax error in last commit
 
  -- Philipp Hahn <hahn@univention.de>  Thu, 18 Sep 2014 11:09:47 +0200
 
