Bug #33397 USS: Delay install of univention-grub
univention-system-setup-boot is installed before the D-I installer had a
chance to install the "right" GRUB, that is grub-pc for traditional BIOS
and grub-efi for UEFI.
As such the package pulls in its first default "grub-pc", which then
breaks on UEFI systems where "grub-efi" is needed, which conflicts with
the previous package.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53794 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/po/de.po
+++ b/base/univention-system-setup/debian/po/de.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: univention-syste-setup 4.0\n"
 "Report-Msgid-Bugs-To: Univention GmbH <packages@univention.de>\n"
-"POT-Creation-Date: 2014-09-15 11:52+0200\n"
-"PO-Revision-Date: 2014-09-15 11:49+0200\n"
+"POT-Creation-Date: 2014-09-19 14:40+0200\n"
+"PO-Revision-Date: 2014-09-19 14:41+0200\n"
 "Last-Translator: Philipp Hahn <hahn@univention.de>\n"
 "Language-Team: German <de@li.org>\n"
 "Language: German\n"
@@ -17,5 +17,29 @@ msgstr ""
 #. Type: text
 #. Description
 #: ../di-univention-system-setup.templates:1001
+msgid "Setup Univention Corporate Server"
+msgstr "Univention Corporate Server Setup"
+
+#. Type: text
+#. Description
+#: ../di-univention-system-setup.templates:2001
 msgid "Starting Univention System Setup..."
 msgstr "Starte Univention System Setup..."
+
+#. Type: text
+#. Description
+#: ../di-univention-system-setup.templates:3001
+msgid "Setting up boot loader GRUB..."
+msgstr "Configurierte Bootload GRUB..."
+
+#. Type: text
+#. Description
+#: ../di-univention-system-setup.templates:4001
+msgid "Generating UCR configuration files..."
+msgstr "Generiere UCR Konfigurationsdateien..."
+
+#. Type: text
+#. Description
+#: ../di-univention-system-setup.templates:5001
+msgid "Done."
+msgstr "Fertig."
