--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.41-2) unstable; urgency=low
+
+  * Bug #33397: Delay install of univention-grub
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 19 Sep 2014 12:05:31 +0200
+
 univention-system-setup (8.0.41-1) unstable; urgency=low
 
   * Bug #35490, Bug #35532:
