--- a/desktop/firefox-en/debian/changelog
+++ b/desktop/firefox-en/debian/changelog
@@ -1,3 +1,9 @@
+firefox-en (1:31.1.0esr-2) unstable; urgency=medium
+
+  * Update to Firefox 31.1 ESR (Bug #35702)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 19 Sep 2014 18:22:40 +0200
+
 firefox-en (1:24.7.0esr-3) unstable; urgency=low
 
   * Added amd64 firefox binary (Bug #35266)
@@ -6,7 +12,7 @@ firefox-en (1:24.7.0esr-3) unstable; urgency=low
 
 firefox-en (1:24.7.0esr-2) unstable; urgency=low
 
-  * Bug #35266: Starting UCS 4,0 development 
+  * Bug #35266: Starting UCS 4,0 development
 
  -- Alexander Kramer <kramer@univention.de>  Fri, 22 Aug 2014 10:01:50 +0200
 
@@ -82,13 +88,13 @@ firefox-en (1:17.0.4esr-5) unstable; urgency=low
 firefox-en (1:17.0.3esr-5) unstable; urgency=low
 
   * Update to Firefox 17.0.3esr (Bug #29185)
-  * Downloaded from http://www.mozilla.org/en-US/firefox/organizations/all.html	
+  * Downloaded from http://www.mozilla.org/en-US/firefox/organizations/all.html
 
  -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Thu, 07 Mar 2013 13:24:01 +0100
 
 firefox-en (1:10.0.9esr-4) unstable; urgency=low
 
-  * fixed debian/control (Bug #27986) 
+  * fixed debian/control (Bug #27986)
 
  -- Felix Botner <botner@univention.de>  Tue, 30 Oct 2012 15:03:50 +0100
 
@@ -106,7 +112,7 @@ firefox-en (1:10.0.7esr-3) unstable; urgency=low
 
 firefox-en (1:10.0.6esr-3) unstable; urgency=low
 
-  * added icedtea6-plugin to depend. (Bug #28246) 
+  * added icedtea6-plugin to depend. (Bug #28246)
 
  -- Felix Botner <botner@univention.de>  Fri, 17 Aug 2012 11:15:16 +0200
 
@@ -131,7 +137,7 @@ firefox-en (1:10.0.4esr-3) unstable; urgency=low
 firefox (1:7.0.1-5) unstable; urgency=low
 
   * Now that openjdk-6 has been fixed, also depend on icedtea6-plugin also on
-    amd64 (Bug #22116)	 
+    amd64 (Bug #22116)
 
  -- Moritz Muehlenhoff <muehlenhoff@univention.de>  Thu, 24 Nov 2011 09:40:21 +0100
 
@@ -140,30 +146,30 @@ firefox (1:7.0.1-4) unstable; urgency=low
   * Depend on icedtea6-plugin on i386. For amd64 we use the modified version now present
     in ia32-libs-gtk, but the dependency already exists anyway. Instead we depend on
     the Java runtime, which indirectly pulled in through the icedtea6-plugin dep on
-    i386.	 
+    i386.
   * On amd64 set a symlink a link to java, since the plugin uses
     relative links, while the Java interpreter is native amd64 and thus in /usr/lib
     instead of /usr/lib32
-  * Add postrm to clean up during removal	
-  * Bug #22116	
-	
+  * Add postrm to clean up during removal
+  * Bug #22116
+
  -- Moritz Muehlenhoff <muehlenhoff@univention.de>  Fri, 11 Nov 2011 10:44:34 +0100
 
 firefox (1:7.0.1-3) unstable; urgency=low
 
-  * Recommend icedtea6-plugin (Bug #22116) 
+  * Recommend icedtea6-plugin (Bug #22116)
 
  -- Moritz Muehlenhoff <muehlenhoff@univention.de>  Fri, 11 Nov 2011 07:32:32 +0100
 
 firefox (1:7.0.1-2) unstable; urgency=low
 
-  * Fix plugin path (Bug #22116) 
+  * Fix plugin path (Bug #22116)
 
  -- Moritz Muehlenhoff <muehlenhoff@univention.de>  Thu, 10 Nov 2011 15:53:28 +0100
 
 firefox (1:7.0.1-1) unstable; urgency=low
 
-  * Revert to Firefox 7.0.1 (Bug #22116) 
+  * Revert to Firefox 7.0.1 (Bug #22116)
 
  -- Moritz Muehlenhoff <muehlenhoff@univention.de>  Wed, 09 Nov 2011 09:30:10 +0100
 
@@ -179,13 +185,13 @@ firefox (7.0.1-9) unstable; urgency=low
     was never properly declared dependency-wise (although it was hidden by indirect
     deps in 2.4). Adding a dependency on dpkg-dev would lead to deps on GCC and many
     other packages, which are terribly suitable for a Firefox dependency.
-    Bug #22116	
+    Bug #22116
 
  -- Moritz Muehlenhoff <muehlenhoff@univention.de>  Fri, 04 Nov 2011 09:00:07 +0100
 
 firefox (7.0.1-8) unstable; urgency=low
 
-  * remove xulrunner dependency (Bug #22860) 
+  * remove xulrunner dependency (Bug #22860)
 
  -- Felix Botner <botner@univention.de>  Tue, 25 Oct 2011 17:26:45 +0200
 
@@ -204,7 +210,7 @@ firefox (7.0.1-2) unstable; urgency=low
 firefox (7.0.1-1) unstable; urgency=low
 
   * Bump version (Bug #22116)
-  * Update XPI translation files for 7.0.1 release 	
+  * Update XPI translation files for 7.0.1 release
 
  -- Moritz Muehlenhoff <muehlenhoff@univention.de>  Tue, 18 Oct 2011 10:24:23 +0200
 
@@ -302,13 +308,13 @@ firefox (3.5.8-1) unstable; urgency=low
 
 firefox (3.5.7-1) unstable; urgency=low
 
-  * Update to Firefox 3.5.7 Bug #17125 
+  * Update to Firefox 3.5.7 Bug #17125
 
  -- Felix Botner <botner@univention.de>  Fri, 08 Jan 2010 08:28:23 +0100
 
 firefox (3.5.6-4) unstable; urgency=low
 
-  * added en-US dictionary Bug #17125 
+  * added en-US dictionary Bug #17125
 
  -- Felix Botner <botner@univention.de>  Mon, 28 Dec 2009 14:57:57 +0100
 
@@ -316,19 +322,19 @@ firefox (3.5.6-3) unstable; urgency=low
 
   * Switch back to the German language build, since the Firefox
     version from UCS 2.3 is currently doesn't permit switching
-    the interface language (Bug #17119)	  
+    the interface language (Bug #17119)
 
  -- Moritz Muehlenhoff <muehlenhoff@univention.de>  Mon, 21 Dec 2009 10:20:19 +0100
 
 firefox (3.5.6-2) unstable; urgency=low
 
-  * Also update XPI files for the translations (Bug #17119) 
+  * Also update XPI files for the translations (Bug #17119)
 
  -- Moritz Muehlenhoff <muehlenhoff@univention.de>  Mon, 21 Dec 2009 09:12:54 +0100
 
 firefox (3.5.6-1) unstable; urgency=low
 
-  * Fix version number (Bug #17119) 
+  * Fix version number (Bug #17119)
 
  -- Moritz Muehlenhoff <muehlenhoff@univention.de>  Fri, 18 Dec 2009 14:28:33 +0100
 
@@ -442,13 +448,13 @@ firefox (3.0.1.0-1) unstable; urgency=low
 
 firefox (3.0.0.0-4) unstable; urgency=low
 
-  * wrapper script: pass arguments to firefox 
+  * wrapper script: pass arguments to firefox
 
  -- Andreas Büsching <buesching@univention.de>  Thu,  7 Aug 2008 08:30:58 +0200
 
 firefox (3.0.0.0-3) unstable; urgency=low
 
-  * ensure that firefox finds the GTK+ printer backends on amd64 
+  * ensure that firefox finds the GTK+ printer backends on amd64
 
  -- Andreas Büsching <buesching@univention.de>  Thu, 31 Jul 2008 12:10:59 +0200
 
@@ -565,4 +571,3 @@ firefox (2.0.0.0-1) unstable; urgency=low
   * initial release
 
  -- Stefan Gohmann <gohmann@univention.de>  Fri, 19 Jan 2007 11:39:45 +0100
-
