--- a/desktop/univention-kde/debian/changelog
+++ b/desktop/univention-kde/debian/changelog
@@ -1,3 +1,9 @@
+univention-kde (9.0.2-2) unstable; urgency=low
+
+  * new kde default wallpaper (Bug #35936) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 22 Sep 2014 12:02:24 +0200
+
 univention-kde (9.0.2-1) unstable; urgency=low
 
   * UCS 4.0 kde theme (Bug #35936) 
