Bug #35921 USS: Adapt debconf texts
Remove 'UCR'.
Fix German translation.
Fix spelling mistakes.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53814 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.41-3) unstable; urgency=low
+
+  * Bug #35921: Adapt debconf texts
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 22 Sep 2014 08:22:18 +0200
+
 univention-system-setup (8.0.41-2) unstable; urgency=low
 
   * Bug #33397: Delay install of univention-grub
