Bug #35969 test/updater: Fix unsigned source file test
APT (>= 0.8.10) now verifies the Release and *.dsc files. Fix the test
to sign the Release and *.dsc files, too.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53820 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.10-1) unstable; urgency=low
+
+  * Bug #35969: Fix unsigned source file test
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 22 Sep 2014 13:06:05 +0200
+
 ucs-test (5.0.9-2) unstable; urgency=medium
 
   * ucs-test-modules-all: added dependency to ucs-test-udm-
