* Host and Port field have been removed from the EC2 connection wizard (Bug #35943) * Set and send a displayname for instance sizes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53821 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,11 @@
+univention-virtual-machine-manager-daemon (4.0.0-13) unstable; urgency=low
+
+  * Host and Port field have been removed from the
+    EC2 connection wizard (Bug #35943)
+  * Set and send a displayname for instance sizes
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 22 Sep 2014 14:42:00 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-12) unstable; urgency=low
 
   * Add search by image id and image owner for EC2 connections
