--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,11 @@
+univention-virtual-machine-manager-daemon (4.0.0-14) unstable; urgency=low
+
+  * Update instance wizard (Bug #35942)
+   - Show memory and harddrive of selected instance size
+   - Add EC2 wizard with filter for univention ami-images
+
+ -- Andreas Peichert <peichert@univention.de>  Mon, 22 Sep 2014 17:17:54 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-13) unstable; urgency=low
 
   * Host and Port field have been removed from the
