--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-82) unstable; urgency=medium
+
+  * Bug #35552: Fix 00_base/02server_password_change
+
+ -- Arvid Requate <requate@univention.de>  Mon, 22 Sep 2014 19:29:05 +0200
+
 ucs-test (4.0.166-81) unstable; urgency=low
 
   * Bug #35969: Fix unsigned source file test
