* Bug #35552: Fix 00_base/02server_password_change
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53845 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.11-1) unstable; urgency=low
+
+  * Bug #35552: Fix 00_base/02server_password_change
+
+ -- Arvid Requate <requate@univention.de>  Mon, 22 Sep 2014 19:33:15 +0200
+
 ucs-test (5.0.10-1) unstable; urgency=low
 
   * Bug #35969: Fix unsigned source file test
