added cron job for re-creating dh parameter files (Bug #35923)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53852 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (8.0.13-3) unstable; urgency=low
+
+  * added cron job for re-creating dh parameter files (Bug #35923) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 23 Sep 2014 09:30:09 +0200
+
 univention-mail-postfix (8.0.13-2) unstable; urgency=low
 
   * create tmp. dh parameter files (Bug #35923) 
