--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (8.0.13-4) unstable; urgency=low
+
+  * reload cron (Bug #35923) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 23 Sep 2014 09:58:24 +0200
+
 univention-mail-postfix (8.0.13-3) unstable; urgency=low
 
   * added cron job for re-creating dh parameter files (Bug #35923) 
