--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,23 @@
+ucs-ec2-tools (0.1.22-7) unstable; urgency=low
+
+  * utils.sh:
+     promote_ad_win is now using python / ps scripts from
+     ucs-windows-tools
+     added function to shutdown remote windows host
+     removed unneeded functions
+     (Bug #35855)
+  * adjusted examples/jenkins/autotest-220-ad-win2k8-master.cfg
+    (Bug #35913)
+
+ -- Drees Dormann <dormann@univention.de>  Wed, 24 Sep 2014 12:09:24 +0200
+
+ucs-ec2-tools (0.1.22-6) unstable; urgency=low
+
+  * python/ec2/lib.py: prohibit execution of run_commands for windows vm's
+    (Bug #35850)
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 19 Sep 2014 13:23:12 +0200
+
 ucs-ec2-tools (0.1.22-5) unstable; urgency=low
 
   * python/ec2/lib.py added '-PN' to python-nmap command (Bug #35850)
