* Show additional instance details on 'edit instance' page (Bug #35944)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53888 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-15) unstable; urgency=low
+
+  * Show additional instance details on 'edit instance' page (Bug #35944)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 24 Sep 2014 13:01:51 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-14) unstable; urgency=low
 
   * Update instance wizard (Bug #35942)
