fixed dependencies (Bug #35999)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53924 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/winexe/debian/changelog
+++ b/test/winexe/debian/changelog
@@ -1,3 +1,9 @@
+winexe (1.1.0-8) unstable; urgency=low
+
+  * fixed dependencies (Bug #35999)
+
+ -- Felix Botner <botner@univention.de>  Thu, 25 Sep 2014 16:50:12 +0200
+
 winexe (1.1.0-7) unstable; urgency=low
 
   * added mingw-w64 to build dependencies (Bug #34572) 
