--- a/test/generate-appliance/debian/changelog
+++ b/test/generate-appliance/debian/changelog
@@ -1,3 +1,9 @@
+generate-appliance (0.2.4-1) unstable; urgency=medium
+
+  * add --memory-size option (Bug #35998)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Thu, 25 Sep 2014 16:15:12 +0200
+
 generate-appliance (0.2.3-1) unstable; urgency=low
 
   * Cleanup of virtualbox xml to support import on MS Windows (Bug #35756) 
