--- a/test/generate-appliance/debian/changelog
+++ b/test/generate-appliance/debian/changelog
@@ -2,6 +2,7 @@ generate-appliance (0.2.4-1) unstable; urgency=medium
 
   * add --memory-size option (Bug #35998)
   * cleanup OVA metadata
+  * add --cpu-count option (Bug #35998)
 
  -- Janek Walkenhorst <walkenhorst@univention.de>  Thu, 25 Sep 2014 16:15:12 +0200
 
