--- a/desktop/firefox-en/debian/changelog
+++ b/desktop/firefox-en/debian/changelog
@@ -1,3 +1,9 @@
+firefox-en (1:24.8.1esr-1) unstable; urgency=medium
+
+  * Update to Firefox 24.8.1 ESR (Bug #35993)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Thu, 25 Sep 2014 17:11:37 +0200
+
 firefox-en (1:24.8.0esr-1) unstable; urgency=medium
 
   * Update to Firefox 24.8 ESR (Bug #35807)
