--- a/management/univention-management-console-module-diagnostic/debian/changelog
+++ b/management/univention-management-console-module-diagnostic/debian/changelog
@@ -1,5 +1,6 @@
 univention-management-console-module-diagnostic (1.0.3-1) unstable; urgency=low
 
+  * Bug #34765: rewrite
   * Bug #35864: add a plugin for checking of  network settings (gateway, DNS,
   	proxy)
 
