* fixed missing "self." in winexe.py(Bug #35855)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53941 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-windows-tools/debian/changelog
+++ b/test/ucs-windows-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-windows-tools (1.0.0-12) unstable; urgency=low
+
+  * fixed missing "self." in winexe.py(Bug #35855)
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 26 Sep 2014 09:05:45 +0200
+
 ucs-windows-tools (1.0.0-11) unstable; urgency=low
 
   * set_local_user_password is now called from
