--- a/desktop/univention-kdm/debian/changelog
+++ b/desktop/univention-kdm/debian/changelog
@@ -1,3 +1,9 @@
+univention-kdm (1.0.0-3) unstable; urgency=low
+
+  * theme update (Bug #35936) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 26 Sep 2014 09:41:55 +0200
+
 univention-kdm (1.0.0-2) unstable; urgency=low
 
   * added theme/config (Bug #35936) 
