--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-16) unstable; urgency=low
+
+  * Bug #35942: fix typos which prevent module opening?
+
+ -- Florian Best <best@univention.de>  Fri, 26 Sep 2014 10:02:50 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-15) unstable; urgency=low
 
   * Show additional instance details on 'edit instance' page (Bug #35944)
