theme update (Bug #35936)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53961 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/univention-kdm/debian/changelog
+++ b/desktop/univention-kdm/debian/changelog
@@ -1,3 +1,9 @@
+univention-kdm (1.0.0-4) unstable; urgency=low
+
+  * theme update (Bug #35936) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 26 Sep 2014 12:52:28 +0200
+
 univention-kdm (1.0.0-3) unstable; urgency=low
 
   * theme update (Bug #35936) 
