--- a/desktop/univention-kde/debian/changelog
+++ b/desktop/univention-kde/debian/changelog
@@ -1,3 +1,9 @@
+univention-kde (9.0.2-3) unstable; urgency=low
+
+  * ksplash theme update (Bug #35936)
+
+ -- Felix Botner <botner@univention.de>  Fri, 26 Sep 2014 12:54:35 +0200
+
 univention-kde (9.0.2-2) unstable; urgency=low
 
   * new kde default wallpaper (Bug #35936) 
