--- a/base/univention-bootsplash/debian/changelog
+++ b/base/univention-bootsplash/debian/changelog
@@ -1,3 +1,9 @@
+univention-bootsplash (6.0.1-3) unstable; urgency=low
+
+  * new bootsplash layout (Bug #35935) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 29 Sep 2014 10:00:45 +0200
+
 univention-bootsplash (6.0.1-2) unstable; urgency=low
 
   * new bootsplash layout (Bug #35935) 
