removed scalix path from defaut profile (Bug #32628)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53984 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (4.0.4-1) unstable; urgency=low
+
+  * removed scalix path from defaut profile (Bug #32628)
+
+ -- Felix Botner <botner@univention.de>  Mon, 29 Sep 2014 10:04:23 +0200
+
 univention-base-files (4.0.3-1) unstable; urgency=low
 
   * Bug #35637: install univention-archive-key by default
