* Bug #35781: Enable management of apps throughout the domain * Bug #35683: Fix point in time for extracting local archive
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53998 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (4.0.0-5) unstable; urgency=low
+
+  * Bug #35781: Enable management of apps throughout the domain
+  * Bug #35683: Fix point in time for extracting local archive
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 29 Sep 2014 12:51:55 +0200
+
 univention-management-console-module-appcenter (4.0.0-4) unstable; urgency=low
 
   * Bug #35683: Update local files after extracting initial archive
