--- a/management/univention-management-console-module-reboot/debian/changelog
+++ b/management/univention-management-console-module-reboot/debian/changelog
@@ -1,3 +1,15 @@
+univention-management-console-module-reboot (4.1.1-1) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Mon, 29 Sep 2014 15:39:17 +0200
+
+univention-management-console-module-reboot (4.1.0-1) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Thu, 25 Sep 2014 12:43:52 +0200
+
 univention-management-console-module-reboot (4.0.0-2) unstable; urgency=low
 
   * Bug #35145: update copyrights
