--- a/management/univention-management-console-module-ucr/debian/changelog
+++ b/management/univention-management-console-module-ucr/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-ucr (4.1.0-1) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Thu, 25 Sep 2014 12:43:53 +0200
+
 univention-management-console-module-ucr (4.0.0-1) unstable; urgency=low
 
   * Bug #35145: Start UCS 4.0 development
