--- a/services/univention-pkgdb/debian/changelog
+++ b/services/univention-pkgdb/debian/changelog
@@ -1,3 +1,15 @@
+univention-pkgdb (8.1.0-2) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Thu, 25 Sep 2014 14:42:03 +0200
+
+univention-pkgdb (8.1.0-1) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Thu, 25 Sep 2014 12:43:54 +0200
+
 univention-pkgdb (8.0.0-5) unstable; urgency=low
 
   * hide "Host _pkgdb._tcp...not found: 3(NXDOMAIN)" warning in join script (Bug #35147)
