--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (8.0.2-1) unstable; urgency=low
+
+  * Bug #33844: Update linux kernel
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 29 Sep 2014 15:04:14 +0200
+
 univention-kernel-image (8.0.1-1) unstable; urgency=low
 
   * Update to the latest kernel build (Bug #35669)
