--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,3 +1,9 @@
+univention-quota (9.1.0-1) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Thu, 25 Sep 2014 12:43:54 +0200
+
 univention-quota (9.0.1-1) unstable; urgency=low
 
   * Update to UCR templates to new upstream versions (Bug #35138)
