--- a/management/univention-system-info/debian/changelog
+++ b/management/univention-system-info/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-info (5.1.0-1) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Thu, 25 Sep 2014 12:43:54 +0200
+
 univention-system-info (5.0.0-1) unstable; urgency=low
 
   * Bug #35145: Start UCS 4.0 development
