--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.2-1) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions 
+
+ -- Florian Best <best@univention.de>  Mon, 29 Sep 2014 16:04:08 +0200
+
 univention-system-setup (8.0.41-3) unstable; urgency=low
 
   * Bug #35921: Adapt debconf texts
