* Bug #35654: UMC design adaptions
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54019 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/data/de.po
+++ b/management/univention-management-console/data/de.po
@@ -14,3 +14,18 @@ msgstr ""
 
 msgid "System"
 msgstr "System"
+
+msgid "Favorites"
+msgstr "Favoriten"
+
+msgid "Users"
+msgstr "Benutzer"
+
+msgid "Devices"
+msgstr "Geräte"
+
+msgid "Domain"
+msgstr "Domäne"
+
+msgid "Software"
+msgstr "Software"
