* Improved UMC wizard texts, added translations (Bug #35991)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54023 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-17) unstable; urgency=low
+
+  * Improved UMC wizard texts, added translations (Bug #35991)
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 29 Sep 2014 16:44:22 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-16) unstable; urgency=low
 
   * Bug #35942: fix typos which prevent module opening?
