--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (8.0.2-2) unstable; urgency=low
+
+  * Bug #33844: Re-add firmware packages as recommends
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 29 Sep 2014 17:05:55 +0200
+
 univention-kernel-image (8.0.2-1) unstable; urgency=low
 
   * Bug #33844: Update linux kernel
